04 Input reactivos v-model

--- a/index.html
+++ b/index.html
@@ -6,24 +6,14 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
     }
-    button {
-      background-color: #3498db;
-      color: white;
-      border: none;
+    input {
+      border: solid 1px #3498db;
+      color: #3498db;
       padding: 10px 15px;
       margin: 10px;
-      cursor: pointer;
       border-radius: 5px;
-    }
-    .counter {
-      font-size: 1.5em;
-      margin: 0 10px;
     }
   </style>
 </head>
@@ -37,23 +27,15 @@
   const vm = Vue.createApp({
     data() {
       return {
-        counter: initialValue
+        text: "Hola amigos",
       }
     },
-    methods: {
-      increment() {
-        this.counter++
-      },
-      decrement() {
-        this.counter--
-      },
-    },
     template: `
-      <form>
-        <button type="button" v-on:click="decrement">-</button>
-        <span class="counter">{{ counter }}</span>
-        <button type="button" v-on:click="increment">+</button>
-      </form>
+      <p> {{ text }} </p>
+      <input
+        type="text"
+        v-model="text"
+      />
     `
   }).mount('#app');
 </script>
