--- a/index.html
+++ b/index.html
@@ -23,19 +23,25 @@
   <img src="" alt="">
 </div>
 <script>
-  const initialValue = 0;
   const vm = Vue.createApp({
     data() {
       return {
-        text: "Hola amigos",
+        firstName: 'Juan',
+        lastName: 'Mendez',
+        now: new Date()
+      }
+    },
+    computed: {
+      fullName() {
+        return `${this.firstName} ${this.lastName}`;
+      },
+      getDate() {
+        return new Date().toLocaleDateString();
       }
     },
     template: `
-      <p> {{ text }} </p>
-      <input
-        type="text"
-        v-model="text"
-      />
+      <div>{{ fullName }}</div>
+      <div>{{ getDate }}</div>
     `
   }).mount('#app');
 </script>
