--- a/index.html
+++ b/index.html
@@ -9,14 +9,33 @@
       margin: 0;
     }
 
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 100vh;
+      width: 100%;
+    }
+
     button {
-      background-color: #3498db;
-      border: solid 1px #3498db;
-      color: white;
+      background-color: #e5e5e5;
+      border: solid 1px black;
+      color: black;
       padding: 10px 15px;
       margin: 10px;
       border-radius: 5px;
       cursor: pointer;
+    }
+
+    .close {
+      background-color: #ff9287;
+      border: solid 1px #e74c3c;
+    }
+
+    .open {
+      background-color: #2ecc71;
+      border: solid 1px #2ecc71;
     }
   </style>
 </head>
@@ -44,11 +63,19 @@
     computed: {
       label() {
         return this.open ? 'Cerrar puerta' : 'Abrir puerta';
+      },
+      status() {
+        return this.open ? 'open' : 'close';
       }
     },
     template: `
-      <div>{{ text }}</div>
-      <button @click="open = !open">{{ label }}</button>
+      <div class="container" :class="[status]">
+        <h2>{{ text }}</h2>
+        <button
+          @click="open = !open"
+        >{{ label }}
+        </button>
+      </div>
     `
   }).mount('#app');
 </script>
