--- a/index.html
+++ b/index.html
@@ -47,12 +47,52 @@
       flex-direction: column;
     }
 
-    .item {
+    .item, form {
       border: solid 1px #e5e5e5;
       border-radius: 12px;
       background: white;
       padding: 8px 12px;
       margin: 8px 0;
+      width: 100%;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+    input, textarea {
+      margin: 8px 0;
+      padding: 8px;
+      border-radius: 5px;
+      border: solid 1px #e5e5e5;
+    }
+
+    .title-holder {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: nowrap;
+    }
+
+    .btn-delete {
+      background-color: #e74c3c;
+      color: white;
+      border: none;
+      padding: 0;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 24px;
+      height: 24px;
+    }
+
+    .btn-submit {
+      background-color: #000000;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 5px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -60,7 +100,7 @@
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <div id="app"></div>
 <script>
-  const vm = Vue.createApp({
+  const app = Vue.createApp({
     data() {
       return {
         text: 'Accede a tu cuenta',
@@ -79,15 +119,33 @@
             title: 'Post 3',
             content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
           },
-        ]
+        ],
+        newPost: {
+          title: '',
+          content: ''
+        }
       }
     },
     watch: {
       open(value) {
-        this.text = value ? 'Cierra Sesión' : 'Accede a tu cuenta'
+        this.text = value ? 'Posts' : 'Accede a tu cuenta'
         if(!value) {
           this.username = "";
         }
+      }
+    },
+    methods: {
+      createPost() {
+        this.posts.push({
+          title: this.newPost.title,
+          content: this.newPost.content
+        });
+        this.newPost.title = '';
+        this.newPost.content = '';
+      },
+      deletePost(index) {
+        console.log(index);
+        this.posts.splice(index, 1);
       }
     },
     computed: {
@@ -96,6 +154,11 @@
       },
       toggleDisbleButton() {
         return this.username === '';
+      },
+
+      buttonPublishPostDisabled() {
+        const { title, content } = this.newPost;
+        return title === '' || content === '';
       }
     },
     template: `
@@ -106,15 +169,38 @@
         <h2>{{ text }}</h2>
         <div v-if="open">
           <p>Hola {{ username }}, bienvenido a tu cuenta</p>
+
+          <!-- Form Section -->
+          <form @submit.prevent="createPost">
+            <label for="title">Título</label>
+            <input
+              type="text"
+              id="title"
+              placeholder="Título"
+              v-model="newPost.title"
+            >
+            <label for="content">Contenido</label>
+            <textarea
+              id="content"
+              placeholder="Contenido"
+              v-model="newPost.content"
+            ></textarea>
+            <button
+              class="btn-submit"
+              :disabled="buttonPublishPostDisabled"
+            >Publicar
+            </button>
+          </form>
+
+          <!-- Post Section -->
           <section class="list">
-            <article
+            <item
               class="item"
               v-for="(post, i) in posts"
               :key="i"
-            >
-              <h3>{{ post.title }}</h3>
-              <p>{{ post.content }}</p>
-            </article>
+              :post="post"
+              @delete="deletePost"
+            />
           </section>
         </div>
         <div v-else>
@@ -125,7 +211,10 @@
             v-model="username"
           >
         </div>
-        <button @click="open = !open" :disabled="toggleDisbleButton">
+        <button
+          @click="open = !open"
+          :disabled="toggleDisbleButton"
+        >
           <span v-if="!open">
             Acceder
           </span>
@@ -135,7 +224,26 @@
         </button>
       </div>
     `
-  }).mount('#app');
+  });
+
+  app.component('item', {
+    props: ['post'],
+    template: `
+      <article class="item">
+        <div class="title-holder">
+          <h3>{{ post.title }}</h3>
+          <button
+            class="btn-delete"
+            @click="$emit('delete')"
+          >&times;
+          </button>
+        </div>
+        <p>{{ post.content }}</p>
+      </article>
+    `
+  });
+
+  const vm = app.mount('#app')
 </script>
 </body>
 </html>
