--- a/index.html
+++ b/index.html
@@ -106,23 +106,36 @@
         items: ['Item 1', 'Item 2', 'Item 3']
       }
     },
+    methods: {
+      removeItem(index, value) {
+        this.items.splice(index, 1)
+        console.log(value);
+      }
+    },
     template: `
-    <ul>
-      <li>
-        <v-item v-for="item in items" :text="item"></v-item>
-      </li>
-    </ul>
+      <ul>
+        <li>
+          <v-item
+            v-for="(item, i) in items"
+            v-bind:text="item"
+            v-on:removeItem="removeItem(i, value)"
+          />
+        </li>
+      </ul>
     `
   });
 
   app.component('v-item', {
     props: {
-      text: {
-        default: 'Texto Vacío'
+      text: String
+    },
+    methods: {
+      rm() {
+        this.$emit('removeItem');
       }
     },
     template: `
-    <li>{{ text }}</li>
+    <li v-on:click="rm">{{ text }}</li>
     `
   })
   const vm = app.mount('#app')
